Update 'ytzc6r5at-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:8373254dc6c0830d13ada8ac3b8316e6e2f58caf@sha256:893c7b7ab2e02d9cc6708cdf0de0d98b7bcae59736a70282075a55728525fea5

--- a/components/ytzc6r5at-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/ytzc6r5at-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ytzc6r5at-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:8373254dc6c0830d13ada8ac3b8316e6e2f58caf@sha256:893c7b7ab2e02d9cc6708cdf0de0d98b7bcae59736a70282075a55728525fea5
+          name: container-image
